--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/ts-plugin": "^1.10.4",
     "@fontsource-variable/onest": "^5.2.7",
     "@midudev/tailwind-animations": "^0.2.0",
     "@tailwindcss/vite": "^4.1.5",
     "astro": "^5.7.10",
-    "tailwindcss": "^4.1.5"
+    "flowbite": "^3.1.2",
+    "tailwindcss": "^4.1.5",
+    "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11"
   }
 }
