--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "astro": "^5.7.10",
     "flowbite": "^3.1.2",
+    "gsap": "^3.13.0",
     "tailwindcss": "^4.1.5",
     "typescript": "^5.8.3"
   },
